ketor/ingress/ketor-ingress-gateway.yml
# ingress direct access use this for subdomain also
# port number range for emstum services start from 8201 - 8300
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ketor-ingress
  namespace: kt
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: public
  tls:
    - hosts:      
      -  www.bottomhalve.com
      secretName: ketor-tls
  rules:           
  - host: www.bottomhalve.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ketor-service
            port:
              number: 8502

      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: core-service
            port:
              number: 8501
